--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      - run: docker build -t jaewonhimnae/react-test -f Dockerfile.dev .
-      - run: docker run -e CI=true jaewonhimnae/react-test npm test
+      - run: docker build -t choi4780/react-test -f Dockerfile.dev .
+      - run: docker run -e CI=true choi4780/react-test npm test
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
@@ -23,7 +23,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: react-docker-gh-test
           environment_name: React-docker-gh-test-env 
-          existing_bucket_name: elasticbeanstalk-ap-northeast-2-972153559337
+          existing_bucket_name: elasticbeanstalk-ap-northeast-2-095729548173
           region: ap-northeast-2
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
