--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,20 +1,21 @@
-version: '3'
+version: "3"
 services:
-  react:
-    build: 
+  web:
+    build:
       context: .
       dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     volumes:
       - /app/node_modules
-      - ./:/app
-    stdin_open: true
+      - .:/app
   tests:
-    build: 
+    stdin_open: true
+    build:
       context: .
       dockerfile: Dockerfile.dev
     volumes:
       - /app/node_modules
-      - ./:/app
+      - .:/app
     command: ["npm", "run", "test"]
+
